--- a/support/static/ngTemplates/app.projects.approval.view.html
+++ b/support/static/ngTemplates/app.projects.approval.view.html
@@ -1,6 +1,35 @@
 <div class="container-fluid" style="padding:20px;" ng-controller="businessManagement.projects.approval.view">
       <div class="col-md-3" style="border-right:solid 2px #eeeeee;min-height:80vh;">
         <div class="row">
+          <div class="col-md-12">
+            <div class="row">
+              <div class="col-md-12 text-left">
+                <label> Project Title : </label> {{form.title}} <br />
+                <label> Service Name :</label> {{form.service.name}} <br />
+                <label>Closing Date : </label> {{form.date}} <br />
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12 text-center">
+                <label> Responsible Persons : </label>
+              </div>
+              <div class="col-md-12">
+                <div ng-repeat="r in form.responsible">
+                  <div class="card container-fluid" style="padding-left:0px;position:relative;margin-top:10px">
+                    <div class="col-md-4" style="padding-top:5px;">
+                      <img ng-src="{{r | getDP}}" class="img-circle" alt="DP" height="50" width="50" />
+                    </div>
+                    <div class="col-md-8">
+                      {{r | getName}} <br>
+                      ID : <strong>{{r}}</strong>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- <div class="row">
 
 
         <div class="row">
@@ -35,7 +64,7 @@
             <h4 ng-repeat = "item in name"><span>{{item}}</span></h4> <br>
           </div>
         </div>
-        </div>
+        </div> -->
 
       </div>
       <div class="col-md-9">
