--- a/tools/static/ngTemplates/app.tools.apiAccounts.item.html
+++ b/tools/static/ngTemplates/app.tools.apiAccounts.item.html
@@ -5,7 +5,7 @@
         <img ng-src="{{data.user | getDP}}" class="img-circle pull-right" width="50"/>
       </div>
       <div class="col-md-11">
-        <div class="col-md-2">
+        <div class="col-md-1">
           <span class="text-muted"><strong>Acc ID : </strong> {{data.pk}}</span>
         </div>
         <div class="col-md-2">
@@ -14,15 +14,19 @@
         <div class="col-md-2">
           <strong>Usage remaining : </strong> <span>{{data.remaining}}</span>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-1">
           <strong>active : </strong> <button type="button" class="btn btn-sm btn-{{data.active? 'success':'danger'}}"></button>
+        </div>
+        <div class="col-md-2">
+          <strong>Name : </strong> <span>{{data.name}}</span>
         </div>
         <div class="col-md-3">
           <strong>Email : </strong> <span>{{data.email}}</span>
         </div>
+        <div class="col-md-1">
+          <i class="fa fa-info-circle fa-2x pull-right" ng-click="rowActionClicked('info')" style="padding-top:15px;cursor:pointer;color:#a8c8e6;"></i>          
+        </div>
       </div>
-      <i class="fa fa-info-circle fa-2x" ng-click="rowActionClicked('info')" style="position:absolute;right:20px;bottom:20px;cursor:pointer;color:#a8c8e6;">
-      </i>
     </div>
   </div>
 </div>
