--- a/tools/static/ngTemplates/app.tools.form.apiAccounts.html
+++ b/tools/static/ngTemplates/app.tools.form.apiAccounts.html
@@ -5,6 +5,10 @@
 <div class="modal-body" ng-controller="home.apiAccounts.create">
   <div class="container-fluid">
     <div class="form-group">
+      <label>Name</label>
+      <input type="text" class="form-control" ng-model="form.name">
+    </div>
+    <div class="form-group">
       <label>Email</label>
       <input type="text" class="form-control" ng-model="form.email">
     </div>
@@ -18,7 +22,7 @@
     </div>
     <div class="form-group">
       <label>Initial Quota</label>
-      <input type="number" class="form-control" ng-model="form.remaining">
+      <input type="number" class="form-control" ng-model="form.remaining" min="0">
     </div>
 
     <div class="form-group">
