--- a/support/static/ngTemplates/app.projects.service.item.html
+++ b/support/static/ngTemplates/app.projects.service.item.html
@@ -24,7 +24,7 @@
             </span>
           </div>
           <div class="row">
-            <span class="pull-right" style="cursor:pointer;"  mwl-confirm title="Approve" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="rowActionClicked('delete')" confirm-button-type="default" cancel-button-type="default"></i>
+            <span class="pull-right" style="cursor:pointer;"  mwl-confirm title="Delete" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="rowActionClicked('delete')" confirm-button-type="default" cancel-button-type="default"></i>
               <i class="fa fa-trash fa-lg" style="margin-top:15px;"></i>
             </span>
           </div>
