--- a/support/static/ngTemplates/app.inventory.html
+++ b/support/static/ngTemplates/app.inventory.html
@@ -77,7 +77,7 @@ style="padding:10px;">
               </div>
               <div class="col-md-2">
                 <span style="font-size:12px"><strong> Description :
-                  </strong>{{p.productDesc}}<span ng-if="p.productDesc2"> &nbsp({{p.productDesc2}})</span> </span>
+                  </strong>{{p.productDesc}} </span>
               </div>
               <div class="col-md-2">
                 <span style="font-size:12px"><strong> Quantity :
@@ -113,7 +113,7 @@ style="padding:10px;">
                     </strong></span><br />
                 </div>
                 <div class="col-md-10">
-                  <span style="font-size:14px">{{p.productDesc2}}<span ng-if="p.productDesc2"> &nbsp({{p.productDesc2}})</span> </span><br /><br />
+                  <span style="font-size:14px">{{p.productDesc2}}</span><br /><br />
                   <span style="font-size:14px">{{p.weight}}</span><br /><br />
                   <span style="font-size:14px">{{p.price}} </span><br />
                 </div>
