--- a/homepage/static/ngTemplates/app.homepage.pricing.html
+++ b/homepage/static/ngTemplates/app.homepage.pricing.html
@@ -13,14 +13,14 @@
             <p style="color:#f95914;font-weight:600">-----</p>
             <p style="font-family:sans-serif;line-height:30px;font-size:15px;padding:4px;">For small teams wanting to try out Slack for an unlimited period of time.</p>
             <a href="#" style="text-decoration: underline;font-size:14px;">Learn more</a><br><br>
-            <button type="button" class="btn btn-primary" style="border:2px solid #1c299d;font-size:16px;font-weight:bold;background-color:#1c299d;color:#fff;width:200px;"> Generate API Key</button>
+            <button type="button" class="btn btn-primary" style="border:2px solid #1c299d;font-size:16px;font-weight:bold;background-color:#1c299d;color:#fff;width:200px;" ng-click="generateApiKey()"> Generate API Key</button>
           </td>
           <td width="50%">
             <h1 style="font-size:30px;font-weight:600;">Enterprise</h1>
             <p style="color:#f95914;font-weight:600">-----</p>
             <p style="font-family:sans-serif;line-height:30px;font-size:14px;">For teams and businesses ready to make Slack the hub for their projects and communications.</p>
             <a href="#" style="text-decoration: underline;font-size:14px;">Learn more</a><br><br>
-            <button type="button" class="btn btn-primary" style="border:2px solid #1c299d;font-size:16px;font-weight:bold;background-color:#1c299d;color:#fff;width:200px;">Contact The Sales </button>
+            <button type="button" class="btn btn-primary" style="border:2px solid #1c299d;font-size:16px;font-weight:bold;background-color:#1c299d;color:#fff;width:200px;" ng-click="contactSales()">Contact The Sales </button>
           </td>
         </tr>
         <tr class="" style="background-color: #e7e7e7;">
