--- a/homepage/static/ngTemplates/app.homepage.contactSale.modal.html
+++ b/homepage/static/ngTemplates/app.homepage.contactSale.modal.html
@@ -15,13 +15,13 @@
           <div class="col-md-6">
             <div class="form-group">
               <label for="">First Name<span>*</span></label>
-              <input type="text" class="form-control" id="" placeholder="" required ng-model="form.firstName">
+              <input type="text" class="form-control" id="" placeholder="First Name" required ng-model="form.firstName">
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
               <label for="">Last Name</label>
-              <input type="text" class="form-control" id="" placeholder="" ng-model="form.lastName">
+              <input type="text" class="form-control" id="" placeholder="Last Name" ng-model="form.lastName">
             </div>
           </div>
         </div>
@@ -36,7 +36,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="form-group">
-              <label for="">Phone Number <span >*</span></label>
+              <label for="">Phone Number</label>
               <input type="text" class="form-control" id="" placeholder="Work Phone Number" ng-model="form.mobileNumber">
             </div>
           </div>
@@ -45,7 +45,7 @@
           <div class="col-md-12">
             <div class="form-group">
               <label for="">Requirments <span>*</span> </label>
-              <input type="text" class="form-control" id="" placeholder="" required ng-model="form.requirements">
+              <input type="text" class="form-control" id="" placeholder="Requirments" required ng-model="form.requirements">
             </div>
           </div>
         </div>
@@ -53,8 +53,7 @@
           <div class="col-md-12">
             <div class="form-group">
               <label for="">Job Level</label>
-              <select class="form-control" ng-model="form.jobLevel" ng-options="cc as cc for cc in jobLevel"></select>
-              <!-- <input type="text" class="form-control" id="" placeholder="" required ng-model="form.jobLevel"> -->
+              <select  ng-init="form.jobLevel = jobLevel[0]" class="form-control" ng-model="form.jobLevel" ng-options="j for j in jobLevel"></select>
             </div>
           </div>
         </div>
@@ -62,16 +61,15 @@
           <div class="col-md-12">
             <div class="form-group">
               <label for="">Company <span>*</span> </label>
-              <input type="text" class="form-control" id="" placeholder="Your Company" required ng-model="form.comapny">
+              <input type="text" class="form-control" ng-model="form.comapany" id="" placeholder="Your Company" required>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col-md-12">
             <div class="form-group">
-              <label for="">Company Industry <span>*</span></label>
-              <select class="form-control" ng-model="form.companyCategory" ng-options="cc as cc for cc in companyCategory"></select>
-              <!-- <input type="text" class="form-control" id="" placeholder="" required ng-model="form.companyCategory"> -->
+              <label for="">Company Industry</label>
+              <select  ng-init="form.companyCategory = companyCategory[0]" class="form-control" ng-model="form.companyCategory" ng-options="cc for cc in companyCategory"></select>
             </div>
           </div>
         </div>
@@ -80,8 +78,7 @@
           <div class="col-md-12">
             <div class="form-group">
               <label for="">What's your field of expertise?</label>
-              <select class="form-control" ng-model="form.companyExpertise" ng-options="cc as cc for cc in companyExpertise"></select>
-              <!-- <input type="text" class="form-control" id="" placeholder="" ng-model="form.companyExpertise"> -->
+              <select ng-init="form.companyExpertise = companyExpertise[0]"  class="form-control" ng-model="form.companyExpertise" ng-options="ce for ce in companyExpertise"></select>
             </div>
           </div>
         </div>
@@ -89,8 +86,7 @@
           <div class="col-md-12">
             <div class="form-group">
               <label for="">Country</label>
-              <select class="form-control" ng-model="form.country" ng-options="cc as cc for cc in country"></select>
-              <!-- <input type="text" class="form-control" id="" placeholder="" ng-model="form.country"> -->
+              <select ng-init="form.country = country[0]" class="form-control" ng-model="form.country" ng-options="c for c in country"></select>
             </div>
           </div>
         </div>
