--- a/homepage/static/ngTemplates/app.homepage.about.html
+++ b/homepage/static/ngTemplates/app.homepage.about.html
@@ -23,7 +23,7 @@
 </div>
 <div class="row owl-theme" style="margin:0px;">
   <div class="col-md-12 text-center" style="padding:30px;">
-    <h3 style="font-size:30px;font-weight:400;">The world’s leading brands trust Optimizely to power their customer experiences.</h3>
+    <h3 style="font-size:30px;font-weight:400;">The world’s leading brands trust EpsilonAI to power their customer experiences.</h3>
   </div>
   <div class=""ng-controller="controller.index">
   <div class="col-md-12">
