--- a/homepage/static/ngTemplates/app.homepage.career.html
+++ b/homepage/static/ngTemplates/app.homepage.career.html
@@ -12,11 +12,11 @@
     <div class="col-md-6 col-sm-12"style="text-align:left;font-size:16px;">
       <h3 style="font-weight:600;">Our Story</h3>
       <span>
-        <p>Born from the success of President Obama’s 2008 campaign trail, Optimizely was founded to enable the world to turn data into action.</p>
-        <p>Over the past seven years, Optimizely has evolved far beyond simple website A/B testing. We recently launched the world’s leading Experimentation Platform to enable experimentation everywhere: across the entire customer experience, on any
+        <p>Born from the success of President Obama’s 2008 campaign trail, EpsilonAI was founded to enable the world to turn data into action.</p>
+        <p>Over the past seven years, EpsilonAI has evolved far beyond simple website A/B testing. We recently launched the world’s leading Experimentation Platform to enable experimentation everywhere: across the entire customer experience, on any
           channel, for any device, in any application.</p>
-        <p>Optimizely allows executives, marketers, product managers, and developers to be brave and make better business decisions.</p>
-        <a class="btn btn-primary btn-rounded">Explore Optimizely Jobs</a>
+        <p>EpsilonAI allows executives, marketers, product managers, and developers to be brave and make better business decisions.</p>
+        <a class="btn btn-primary btn-rounded">Explore EpsilonAI Jobs</a>
       </span>
     </div>
     <div class="col-md-6 col-sm-12"style="padding:10px 0px 10px 0px;">
@@ -53,7 +53,7 @@
   <div class="col-md-5 col-md-offset-4 col-sm-12" style="color:#fff;padding:30px;background-color:#fff;border-radius:5px;color:#061549;padding:30px 50px 30px 50px">
     <h1 style="font-size:30px;font-weight:600;">We've got your back</h1>
     <div class="" style="padding-top:20px;">
-      <p>At Optimizely, we offer a wide array of benefits and perks to help our employees strike just the right balance between work time and personal time. We’re all about optimizing productivity by maximizing joy.</p>
+      <p>At EpsilonAI, we offer a wide array of benefits and perks to help our employees strike just the right balance between work time and personal time. We’re all about optimizing productivity by maximizing joy.</p>
       <div class="" style="padding:5px;line-height:35px;">
         <ul class="list-unstyled">
           <li><i class="fa fa-usd"></i> Competitive pay and equity</li>
@@ -89,7 +89,7 @@
     <h1>EpsilonAI is for everyone</h1>
   </div>
   <div class="col-md-6 col-md-offset-3 text-center" style="padding:10px;font-size:16px;line-height:30px;font-family:sans-serif;text-align:center">
-    <span>At Optimizely, we embody inclusion and embrace diversity. Optimizely is an equal opportunity employer and makes employment decisions on the basis of merit. Optimizely prohibits
+    <span>At EpsilonAI, we embody inclusion and embrace diversity. EpsilonAI is an equal opportunity employer and makes employment decisions on the basis of merit. EpsilonAI prohibits
       discrimination based on race, color, religion, sex, sexualidentity, gender identity, marital status, veteran status, nationality, citizenship, age, disability, medical condition, pregnancy, or any other unlawful consideration.
     </span>
   </div>
