--- a/homepage/static/ngTemplates/app.homepage.pricing.html
+++ b/homepage/static/ngTemplates/app.homepage.pricing.html
@@ -79,7 +79,7 @@
       <hr>
     </div>
 
-    <div class="col-sm-12 enterpriseimg" style="padding:40px 10px 0px 0px;">
+    <div class="col-sm-12 enterpriseimg hidden-lg hidden-md" style="padding:40px 10px 0px 0px;">
       <img src="/static/images/users.png" alt="" width="230px" height="200px">
     </div>
     <!-- <div class="col-md-1">
