--- a/homepage/static/ngTemplates/app.homepage.contact_us.html
+++ b/homepage/static/ngTemplates/app.homepage.contact_us.html
@@ -6,22 +6,30 @@
     <h2>Conatct us</h2>
   </div>
 </div>
-  <div class="col-md-8 col-md-offset-2">
-    <h3>Questions? Comments? Want to find out more about Robotic Process Automation? We can help.
-      Please fill out the form below and we will get back to you ASAP.</h3>
-  </div>
+<div class="col-md-8 col-md-offset-2">
+  <h3>Questions? Comments? Want to find out more about Robotic Process Automation? We can help.
+    Please fill out the form below and we will get back to you ASAP.</h3>
+</div>
 <div class="row" style="margin:0px;">
   <div class="col-md-8 col-md-offset-2">
     <div class="col-md-8 col-sm-12">
       <div class="mapouter">
         <div class="gmap_canvas">
-          <iframe width="100%" height="600" id="gmap_canvas" src="https://maps.google.com/maps?q=cioc&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+          <iframe width="100%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=cioc&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
           <a href="https://www.pureblack.de"></a>
         </div>
-        <style>.mapouter{text-align:right;height:600px;width:100%;}.gmap_canvas {overflow:hidden;background:none!important;height:600px;width:100%;}</style>
+        <style>.mapouter{text-align:right;height:500px;width:100%;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:100%;}</style>
+      </div>
+      <div class="col-md-12" style="padding:10px;color:#0b0952">
+        <div class="col-md-5"><i class="fa fa-map-marker" aria-hidden="true"> </i>
+          <strong>4th floor Parappana Agrahara Main Rd, Kudlu, Bengaluru, Karnataka -- 560068</strong> </div>
+        <div class="col-md-3">
+          </div>
+        <div class="col-md-4 "><i class="fa fa-phone" aria-hidden="true"></i> <strong>+91 9937634983</strong><br>
+        <i class="fa fa-envelope" aria-hidden="true"></i> <strong>info@epsilonai.in</strong></div>
       </div>
     </div>
-    <div class="col-md-4 col-sm-12"style="padding:10px;">
+    <div class="col-md-4 col-sm-12" style="padding:10px;">
       <div class="form-group">
         <input type="text" class="form-control" ng-model="form.fname" placeholder="First Name">
       </div>
