--- a/support/static/ngTemplates/app.projects.html
+++ b/support/static/ngTemplates/app.projects.html
@@ -43,7 +43,8 @@
             <i class="fa fa-list-ul"></i>
           </uib-tab-heading>
           <div class="container-fluid" >
-            <div ng-include="'/static/ngTemplates/app.projects.invoice.html'"></div> 
+            <generic-Table data="data3.tableData" config-Obj="{{config3}}" callback-Fn="tableAction3"></generic-Table>
+            <!-- <div ng-include="'/static/ngTemplates/app.projects.invoice.html'"></div>  -->
           </div>
         </uib-tab>
         <uib-tab ng-repeat="tab in tabs" active="tab.active" disable="tab.disabled">
