--- a/support/static/ngTemplates/app.projects.html
+++ b/support/static/ngTemplates/app.projects.html
@@ -39,11 +39,11 @@
         </uib-tab>
         <uib-tab >
           <uib-tab-heading>
-            Invoice
+            On Going
             <i class="fa fa-list-ul"></i>
           </uib-tab-heading>
           <div class="container-fluid" >
-            <div ng-include="'/static/ngTemplates/app.projects.invoice.html'"></div> 
+            <div ng-include="'/static/ngTemplates/app.projects.invoice.html'"></div>
           </div>
         </uib-tab>
         <uib-tab ng-repeat="tab in tabs" active="tab.active" disable="tab.disabled">
