--- a/static_shared/ngTemplates/header.html
+++ b/static_shared/ngTemplates/header.html
@@ -17,6 +17,7 @@
       </a> -->
       <a class="navbar-brand" href="/" style="margin-left:10px;padding-top:0px;margin-top:-15px;color:white;">
         <h1>Bruderer</h1>
+        <!-- <img src="/static/images/Bruderer_Logo_svg.svg" alt="" style="height:5vh;width:25vh;color:white;"> -->
       </a>
       <div class="navbar-brand" style="margin-right:30px;color:white"></div>
     </div>
