--- a/support/static/ngTemplates/app.projects.invoice.view.html
+++ b/support/static/ngTemplates/app.projects.invoice.view.html
@@ -27,7 +27,16 @@
              </div>
            </div>
          </div>
+         <div class="row">
+           <div class="col-md-12 text-left">
+             <div class="row">
+               <div class="col-md-12 text-center" style="margin-top:30px;">
+                 <span><b>Completed</b><i class="fa fa-lg fa-check-circle text-success" style="margin-left:1em;"></i></span>
 
+               </div>
+             </div>
+           </div>
+         </div>
        </div>
      </div>
     </div>
