--- a/support/static/ngTemplates/app.projects.service.view.html
+++ b/support/static/ngTemplates/app.projects.service.view.html
@@ -86,25 +86,16 @@
       </tbody>
     </table>
     <div class="row" ng-if="showbutton||projects.length>0">
-      <div class="col-md-9">
+      <div class="col-md-11">
         <button type="button" class="btn btn-success pull-right"  mwl-confirm title="Delete" message="Are you sure?" data-placement="bottom" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="sendForApproval()"
           confirm-button-type="default" cancel-button-type="default"> Send For Approval</button>
       </div>
-      <div class="col-md-1">
-        <!-- <button type="button" class="btn btn-success pull-right"  style="margin-right:55px;"> -->
+      <!-- <div class="col-md-1">
         <span><a class="btn btn-primary pull-right" style="cursor:pointer;" target="_blank" href="/api/support/slip/?project={{form.pk}}">PO<i class="fa fa-download" style="font-size:1;margin-left:1em"></i></a></span>
-        <!-- </button> -->
       </div>
       <div class="col-md-2">
-        <!-- <button type="button" class="btn btn-success pull-right"  style="margin-right:55px;"> -->
         <span><a class="btn btn-primary " style="cursor:pointer;" target="_blank" href="/api/support/quotation/?project={{form.pk}}">Quotation<i class="fa fa-download" style="font-size:1;margin-left:1em"></i></a></span>
-        <!-- </button> -->
-      </div>
+      </div> -->
     </div>
-    <!-- </div> -->
-    <!-- <div class="row">
-      <table cellpadding="0" cellspacing="0" border="0" align="center" width="600" class="container">
-      </table>
-    </div> -->
   </div>
 </div>
