--- a/support/static/ngTemplates/app.projects.success.view.html
+++ b/support/static/ngTemplates/app.projects.success.view.html
@@ -103,15 +103,17 @@
         </tbody>
         </table>
         <div class="row">
-          <div class="col-md-10">
+          <div class="col-md-8">
               <button type="button" class="btn btn-success pull-right" ng-if="form.savedStatus==false" mwl-confirm title="Confirm" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="send()" confirm-button-type="danger" cancel-button-type="default"  style="margin:30px 0 0 0;">Save</button>
           </div>
 
           <!-- <div class="col-md-1">
               <span><a  class="btn btn-primary " style="cursor:pointer;margin:30px 60px 0 0;" target="_blank" href="/api/support/slip/?project={{form.pk}}">PO<i  class="fa fa-download" style="font-size:1em;cursor:pointer;margin-left:1em"></i></a></span>
           </div> -->
-          <div class="col-md-2">
-              <span><a  class="btn btn-primary " style="cursor:pointer;margin:30px 60px 20px 0;" target="_blank" href="/api/support/grn/?project={{form.pk}}">GRN<i  class="fa fa-download" style="font-size:1em;cursor:pointer;margin-left:1em"></i></a></span>
+          <div class="col-md-4">
+              <span><a  class="btn btn-primary pull-right" style="cursor:pointer;margin:30px 0 0 10px ;" target="_blank" href="/api/support/grn/?project={{form.pk}}">GRN<i  class="fa fa-download" style="font-size:1em;cursor:pointer;margin-left:1em"></i></a></span>
+              <span><a class="btn btn-primary pull-right" style="cursor:pointer;margin:30px 0 0 10px  ;" target="_blank" href="/api/support/quotation/?project={{form.pk}}">Quotation<i class="fa fa-download" style="font-size:1;margin-left:1em"></i></a></span>
+              <span ><a class="btn btn-primary pull-right" style="cursor:pointer;margin:30px 0 0 10px ;" target="_blank" href="/api/support/slip/?project={{form.pk}}">PO<i class="fa fa-download" style="font-size:1;margin-left:1em"></i></a></span>
           </div>
         </div>
       <div class="row" ng-if="issue">
