--- a/static_shared/ngTemplates/chatBox.html
+++ b/static_shared/ngTemplates/chatBox.html
@@ -28,7 +28,9 @@
       </div>
       <div class="row" style="padding:10px;padding-bottom:0px">
         <div class="col-md-8" style="padding-right:0px;">
-          <i class="fa fa-circle" aria-hidden="true" style="color:{{data.isOnline ? '#37a508':'#ff0022'}}"></i> <span style="font-size:18px;">{{data.uid}}</span>
+          <i class="fa fa-circle" aria-hidden="true" style="color:{{data.isOnline ? '#37a508':'#ff0022'}}"></i>
+           <span style="font-size:15px;">{{data.uid}}</span>
+           <span style="font-size:15px;">{{data.companyPk}}</span>
           <h4 style="margin:5px 10px">{{data.name}} <span ng-if="data.email" class="text-muted" style="font-size:10px;" >({{data.email}})</span> </h4>
         </div>
         <div class="col-md-2">
