--- a/support/static/ngTemplates/app.qualityCheck.html
+++ b/support/static/ngTemplates/app.qualityCheck.html
@@ -115,8 +115,13 @@
               </div>
             </div>
 
-            <div ng-if="reviewData.length>14" class="col-sm-12" style="text-align:center">
-              <button style="background-color:#286090;padding:5px;color:white" ng-click="loadMore()">Load More</button>
+            <div class="" style="width: 100%;position: absolute;top:400px;left:40%;color:#f0f0f0;font-size:40px" ng-if="myDialouge">
+              No More Data
+            </div>
+
+            <div ng-if="reviewData.length>14||onceClicked" class="col-sm-12" style="text-align:center">
+              <button style="background-color:#286090;padding:5px;color:white" ng-click="goBack()" ng-if="onceClicked">Go Back</button>
+              <button style="background-color:#286090;padding:5px;color:white" ng-click="loadMore()" ng-if="!myDialouge">Load More</button>
             </div>
 
 
