--- a/support/static/ngTemplates/app.projects.success.view.html
+++ b/support/static/ngTemplates/app.projects.success.view.html
@@ -155,7 +155,7 @@
             <th>Product</th>
             <th>Part No</th>
             <th>Quantity</th>
-            <th>Customer Price</th>
+            <th>Landed Price</th>
             <th>Price</th>
             <th>Quantity Received</th>
             <th>Total</th>
@@ -184,21 +184,13 @@
 
         </tbody>
         </table>
-        <div class="row">
-          <div class="col-md-8">
-              <button type="button" class="btn btn-success pull-right" ng-if="form.savedStatus==false" mwl-confirm title="Confirm" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="send()" confirm-button-type="danger" cancel-button-type="default"  style="margin:30px 0 0 0;">Save</button>
-          </div>
-
-          <!-- <div class="col-md-1">
-              <span><a  class="btn btn-primary " style="cursor:pointer;margin:30px 60px 0 0;" target="_blank" href="/api/support/slip/?project={{form.pk}}">PO<i  class="fa fa-download" style="font-size:1em;cursor:pointer;margin-left:1em"></i></a></span>
-          </div> -->
           <div class="col-md-4">
               <span><a  class="btn btn-primary pull-right" style="cursor:pointer;margin:30px 0 0 10px ;" target="_blank" href="/api/support/grn/?project={{form.pk}}">GRN<i  class="fa fa-download" style="font-size:1em;cursor:pointer;margin-left:1em"></i></a></span>
               <span><a class="btn btn-primary pull-right" style="cursor:pointer;margin:30px 0 0 10px  ;" target="_blank" href="/api/support/quotation/?project={{form.pk}}">Quotation<i class="fa fa-download" style="font-size:1;margin-left:1em"></i></a></span>
               <span ><a class="btn btn-primary pull-right" style="cursor:pointer;margin:30px 0 0 10px ;" target="_blank" href="/api/support/slip/?project={{form.pk}}">PO<i class="fa fa-download" style="font-size:1;margin-left:1em"></i></a></span>
           </div>
         </div>
-      <div class="row" ng-if="issue">
+      <!-- <div class="row" ng-if="issue">
         <hr>
         <div class="col-md-12">
         <table class="invoiceTable" style=" width: 100%;" >
@@ -229,7 +221,7 @@
         </tbody>
         </table>
         </div>
-        </div>
+        </div> -->
       </div>
 
 
