--- a/support/static/ngTemplates/app.qualityCheck.html
+++ b/support/static/ngTemplates/app.qualityCheck.html
@@ -188,8 +188,13 @@
                 </div>
               </div>
             </div>
-            <div ng-if="archivedData.length>14" class="col-sm-12" style="text-align:center">
-              <button style="background-color:#286090;padding:5px;color:white" ng-click="loadMoreArchived()">Load More</button>
+            <div class="" style="width: 100%;position: absolute;top:400px;left:40%;color:#f0f0f0;font-size:40px" ng-if="myDialouge">
+              No More Data
+            </div>
+
+            <div ng-if="archivedData.length>14||archievedOnceClicked" class="col-sm-12" style="text-align:center">
+              <button style="background-color:#286090;padding:5px;color:white" ng-click="goBackArchived()" ng-if="archievedOnceClicked">Go Back</button>
+              <button style="background-color:#286090;padding:5px;color:white" ng-click="loadMoreArchived()" ng-if="!archievedMyDialouge">Load More</button>
             </div>
           </div>
         </div>
