--- a/support/static/ngTemplates/app.projects.success.view.html
+++ b/support/static/ngTemplates/app.projects.success.view.html
@@ -32,7 +32,7 @@
                 <label> Invoice Value: </label>
               </div>
               <div class="col-md-8">
-                <input type="text" class="form-control text-center" ng-model="form.invoiceValue"  >
+                <input type="text" class="form-control text-center" ng-model="form.invoiceValue"  ng-init="form.invoiceValue=0">
               </div>
             </div>
             <div class="row" style="padding-top:10px">
@@ -40,7 +40,7 @@
                 <label> Packing: </label>
               </div>
               <div class="col-md-8">
-                <input type="text" class="form-control text-center" ng-model="form.packing"  >
+                <input type="text" class="form-control text-center" ng-model="form.packing"  ng-init="form.packing=0">
               </div>
             </div>
             <div class="row" style="padding-top:10px">
@@ -48,7 +48,7 @@
                 <label> Insurance: </label>
               </div>
               <div class="col-md-8">
-                <input type="text" class="form-control text-center" ng-model="form.insurance"  >
+                <input type="text" class="form-control text-center" ng-model="form.insurance" ng-init="form.insurance=0" >
               </div>
             </div>
             <div class="row" style="padding-top:10px">
@@ -56,7 +56,7 @@
                 <label> Freight: </label>
               </div>
               <div class="col-md-8">
-                <input type="text" class="form-control text-center" ng-model="form.freight"  >
+                <input type="text" class="form-control text-center" ng-model="form.freight" ng-init="form.freight=0" >
               </div>
             </div>
             <div class="row" style="padding-top:10px">
@@ -64,7 +64,7 @@
                 <label> Assessable Value: </label>
               </div>
               <div class="col-md-8">
-                <input type="text" class="form-control text-center" ng-model="form.assessableValue"  >
+                <input type="text" class="form-control text-center" ng-model="form.assessableValue" ng-init="form.assessableValue=0" >
               </div>
             </div>
             <div class="row" style="padding-top:10px">
@@ -72,7 +72,7 @@
                 <label> GST: </label>
               </div>
               <div class="col-md-8">
-                <input type="text" class="form-control text-center" ng-model="form.gst1"  >
+                <input type="text" class="form-control text-center" ng-model="form.gst1" ng-init="form.gst1=0" >
               </div>
             </div>
             <div class="row" style="padding-top:10px">
@@ -80,7 +80,7 @@
                 <label> GST: </label>
               </div>
               <div class="col-md-8">
-                <input type="text" class="form-control text-center" ng-model="form.gst2"  >
+                <input type="text" class="form-control text-center" ng-model="form.gst2"  ng-init="form.gst2=0">
               </div>
             </div>
             <div class="row" style="padding-top:10px">
@@ -88,7 +88,7 @@
                 <label> Clearing Charges 1: </label>
               </div>
               <div class="col-md-8">
-                <input type="text" class="form-control text-center" ng-model="form.clearingCharges1"  >
+                <input type="text" class="form-control text-center" ng-model="form.clearingCharges1"  ng-init="form.clearingCharges1=0">
               </div>
             </div>
             <div class="row" style="padding-top:10px">
@@ -96,7 +96,7 @@
                 <label> Clearing Charges 2: </label>
               </div>
               <div class="col-md-8">
-                <input type="text" class="form-control text-center" ng-model="form.clearingCharges2"  >
+                <input type="text" class="form-control text-center" ng-model="form.clearingCharges2"  ng-init="form.clearingCharges2=0">
               </div>
             </div>
 
@@ -165,9 +165,9 @@
               <td>{{v.products.description_1}}<span ng-if="v.products.description_2"> &nbsp({{v.products.description_2}})</span></td>
               <td>{{v.products.part_no}}</td>
               <td>{{v.quantity1}}</td>
-              <td>{{v.customer_price}}</td>
+              <td ><input   step=1 class="form-control-pos" ng-init="landprice =v.price" ng-model="landprice"></td>
               <td >{{v.price}}</td>
-              <td ><input type="number"  step=1 class="form-control-pos" ng-init="v.quantity2 = v.quantity1" ng-model="v.quantity2"></td>
+              <td ><input   step=1 class="form-control-pos" ng-init="v.quantity2 = v.quantity1" ng-model="v.quantity2"></td>
               <td >{{(v.price*v.quantity2).toFixed(2)}}</td>
             </tr>
             <tr>
@@ -184,7 +184,7 @@
 
         </tbody>
         </table>
-          <div class="col-md-4">
+          <div class="col-md-12">
               <span><a  class="btn btn-primary pull-right" style="cursor:pointer;margin:30px 0 0 10px ;" target="_blank" href="/api/support/grn/?project={{form.pk}}">GRN<i  class="fa fa-download" style="font-size:1em;cursor:pointer;margin-left:1em"></i></a></span>
               <span><a class="btn btn-primary pull-right" style="cursor:pointer;margin:30px 0 0 10px  ;" target="_blank" href="/api/support/quotation/?project={{form.pk}}">Quotation<i class="fa fa-download" style="font-size:1;margin-left:1em"></i></a></span>
               <span ><a class="btn btn-primary pull-right" style="cursor:pointer;margin:30px 0 0 10px ;" target="_blank" href="/api/support/slip/?project={{form.pk}}">PO<i class="fa fa-download" style="font-size:1;margin-left:1em"></i></a></span>
