--- a/support/static/ngTemplates/app.projects.success.view.html
+++ b/support/static/ngTemplates/app.projects.success.view.html
@@ -27,12 +27,13 @@
                 </div>
               </div>
             </div>
+
             <div class="row" style="padding-top:10px">
               <div class="col-md-4 text-center">
                 <label> Invoice Value: </label>
               </div>
               <div class="col-md-8">
-                <input type="text" class="form-control text-center" ng-model="form.invoiceValue"  >
+                <input type="number" class="form-control text-center" ng-model="form.invoiceValue"  >
               </div>
             </div>
             <div class="row" style="padding-top:10px">
@@ -40,7 +41,7 @@
                 <label> Packing: </label>
               </div>
               <div class="col-md-8">
-                <input type="text" class="form-control text-center" ng-model="form.packing"  >
+                <input type="number" class="form-control text-center" ng-model="form.packing"  >
               </div>
             </div>
             <div class="row" style="padding-top:10px">
@@ -48,7 +49,7 @@
                 <label> Insurance: </label>
               </div>
               <div class="col-md-8">
-                <input type="text" class="form-control text-center" ng-model="form.insurance"  >
+                <input type="number" class="form-control text-center" ng-model="form.insurance"  >
               </div>
             </div>
             <div class="row" style="padding-top:10px">
@@ -56,7 +57,7 @@
                 <label> Freight: </label>
               </div>
               <div class="col-md-8">
-                <input type="text" class="form-control text-center" ng-model="form.freight"  >
+                <input type="number" class="form-control text-center" ng-model="form.freight"  >
               </div>
             </div>
             <div class="row" style="padding-top:10px">
@@ -64,7 +65,7 @@
                 <label> Assessable Value: </label>
               </div>
               <div class="col-md-8">
-                <input type="text" class="form-control text-center" ng-model="form.assessableValue"  >
+                <input type="number" class="form-control text-center" ng-model="form.assessableValue"  >
               </div>
             </div>
             <div class="row" style="padding-top:10px">
@@ -72,7 +73,7 @@
                 <label> GST: </label>
               </div>
               <div class="col-md-8">
-                <input type="text" class="form-control text-center" ng-model="form.gst1"  >
+                <input type="number" class="form-control text-center" ng-model="form.gst1"  >
               </div>
             </div>
             <div class="row" style="padding-top:10px">
@@ -80,7 +81,7 @@
                 <label> GST: </label>
               </div>
               <div class="col-md-8">
-                <input type="text" class="form-control text-center" ng-model="form.gst2"  >
+                <input type="number" class="form-control text-center" ng-model="form.gst2"  >
               </div>
             </div>
             <div class="row" style="padding-top:10px">
@@ -88,7 +89,7 @@
                 <label> Clearing Charges 1: </label>
               </div>
               <div class="col-md-8">
-                <input type="text" class="form-control text-center" ng-model="form.clearingCharges1"  >
+                <input type="number" class="form-control text-center" ng-model="form.clearingCharges1"  >
               </div>
             </div>
             <div class="row" style="padding-top:10px">
@@ -96,7 +97,7 @@
                 <label> Clearing Charges 2: </label>
               </div>
               <div class="col-md-8">
-                <input type="text" class="form-control text-center" ng-model="form.clearingCharges2"  >
+                <input type="number" class="form-control text-center" ng-model="form.clearingCharges2"  >
               </div>
             </div>
 
