--- a/static_shared/ngTemplates/chatBox.html
+++ b/static_shared/ngTemplates/chatBox.html
@@ -30,7 +30,7 @@
         <div class="col-md-8" style="padding-right:0px;">
           <i class="fa fa-circle" aria-hidden="true" style="color:{{data.isOnline ? '#37a508':'#ff0022'}}"></i>
            <span style="font-size:15px;">{{data.uid}}</span>
-           <span style="font-size:15px;">{{data.companyPk}}</span>
+           <span style="font-size:15px;">{{data.companyPk | getCompanyName}}</span>
           <h4 style="margin:5px 10px">{{data.name}} <span ng-if="data.email" class="text-muted" style="font-size:10px;" >({{data.email}})</span> </h4>
         </div>
         <div class="col-md-2">
