--- a/support/static/ngTemplates/app.inventory.html
+++ b/support/static/ngTemplates/app.inventory.html
@@ -92,9 +92,9 @@ style="padding:10px;">
                   </strong>{{p.totalVal.toFixed(2)}} </span>
               </div>
               <div class="col-md-2">
-                <button class="btn btn-primary" ng-if="p.totalqty>0" style="font-size:12px" ng-click="addToCart(p.productPk);$event.stopPropagation();">Add to Cart
+                <button class="btn btn-primary" ng-if="p.totalqty>0&&!p.addedCart" style="font-size:12px" ng-click="addToCart(p.productPk,$index);$event.stopPropagation();">Add to Cart
                 </button>
-                <!-- <button class="btn btn-default" ng-if="p.totalqty>0"  style="font-size:12px">Added to Cart </button> -->
+                <button class="btn btn-default" ng-if="p.totalqty>0&&p.addedCart"  style="font-size:12px">Added to Cart </button>
               </div>
             </div>
           </div>
