--- a/static_shared/ngTemplates/chatBox.html
+++ b/static_shared/ngTemplates/chatBox.html
@@ -78,7 +78,7 @@
 
         <div class="row container-fluid">
           <div ng-if="!message.logs" style="float:{{message.sentByAgent ? 'right; background-color:#E4E5E9; ':'left; background-color:#DDF7C8;'}} padding:10px;margin:8px;border-radius:{{message.sentByAgent ? '20px 0px 20px 20px':'0px 20px 20px 20px'}};">
-            <p ng-if="message.message.length>0 && message.attachmentType!='youtubeLink'" style="word-wrap: break-word; !important; white-space: pre-wrap;   "> <span ng-if="message.message.includes('www.') || message.message.includes('http')"> <a href="{{message.message}}">{{message.message}}</a> </span> <span ng-if="!message.message.includes('www.') && !message.message.includes('http')">{{message.message }}</span>  </p>
+            <p ng-if="message.message.length>0 && message.attachmentType!='youtubeLink'" style="word-wrap: break-word; !important; white-space: pre-wrap; "> <span ng-bind-html="(message.message | linkInText)"></span></p>
             <img ng-if="message.attachmentType == 'image' ||message.attachmentType == 'instructionImage'" ng-src="{{message.attachment}}" style="width:250px;">
             <video ng-if="message.attachmentType == 'video'" width="280" height="240" ng-src="{{message.attachment}}" controls></video>
             <audio ng-if="message.attachmentType == 'audio'" ng-src="{{message.attachment}}" controls></audio>
